--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
           <div class="col-lg-12 text-center mt-5">
         
             <h1 class="display-3 mt-5 pt-5 top-spacing" style="font-family:Montserrat;">
-              App Now. Pay Later.
+              Sydney Volunteer Programmers
             </h1>
         
            </div>
