Added Godsgift Akari as FCC Trainer

--- a/templates/fellowship.html
+++ b/templates/fellowship.html
@@ -110,7 +110,12 @@
               <td><a href="https://www.linkedin.com/in/suryast/?originalSubdomain=au" target="_blank">Surya Setiyaputra</a></td>
               <td>FCC Trainer</td>
               <td>October 2019</td>
-          </tr>
+            </tr>
+            <tr>
+              <td><a href="https://www.linkedin.com/in/godsgift-akari-9951b05b/" target="_blank">Godsgift Akari</a></td>
+              <td>FCC Trainer</td>
+              <td>October 2019</td>
+            </tr>
         </tbody>
     </table>
     <script src="static/js/jquery.min.js"></script>
