--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -38,6 +38,10 @@
         </thead>
         <tbody>
             <tr>
+                <td>November 2019</a></td>
+                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_November_2019.pdf') }}" target="_blank">The Hexagon November 2019</a></td>
+            </tr>
+            <tr>
                 <td>October 2019</a></td>
                 <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_October_2019.pdf') }}" target="_blank">The Hexagon October 2019</a></td>
             </tr>
