Updated Fellowship and Newsletter

--- a/templates/fellowship.html
+++ b/templates/fellowship.html
@@ -116,6 +116,16 @@
               <td>FCC Trainer</td>
               <td>October 2019</td>
             </tr>
+            <tr>
+              <td><a href="https://www.linkedin.com/in/florencia-calvo" target="_blank">Florencia Calvo</a></td>
+              <td>FCC Responsive Web Design</td>
+              <td>January 2020</td>
+            </tr>
+            <tr>
+              <td><a href="https://www.linkedin.com/in/prashanga-dhakal-0a4677a6/" target="_blank">Prashanga Dhakal</a></td>
+              <td>FCC JavaScript Algorithms and Data Structures</td>
+              <td>January 2020</td>
+            </tr>
         </tbody>
     </table>
     <script src="static/js/jquery.min.js"></script>
