--- a/templates/fccleaderboard.html
+++ b/templates/fccleaderboard.html
@@ -1,68 +1,52 @@
-<!DOCTYPE html>
-<html>
+{% extends 'layout.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code.Sydney</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='fonts/font-awesome.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='fonts/ionicons.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Footer-Basic.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Header-Dark.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Highlight-Clean.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Login-Form-Clean.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Navigation-Clean.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Navigation-with-Button.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Projects-Clean.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Projects-Horizontal.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Team-Clean.css') }}">
-</head>
-
+{% block content %}
+  <!-- SHOWCASE -->
+  <section id="showcase">
+    <div class="primary-overlay text-white">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center mt-5">
+        
+            <h1 class="display-3 mt-5 pt-5 top-spacing" style="font-family:Montserrat;">
+              Free Code Campers 
+            </h1>
+        
+           </div>
+         </div>
+      </div>    
+    </div>
+  </section>
 <body>
 
-    <div style="color:#636363;">
-        <h2 class="text-center" style="font-size:60px;color:#37434d;">Sydney Volunteer Programmers</h2>
-    </div>
-    <div>
-        <br/>
-        <h2 class="text-center" style="font-size:25px;">1st Place Winner, Vibewire's Hack4FI (Financial Inclusion) 2018</h2>
-        <h2 class="text-center" style="font-size:25px;">3rd Place Winner, Vibewire's Hack4Homelessness 2017</h2>
-    </div>
+<h3 style="margin-left:100px; color: gray">Leaderboard</h3>
+<p>
+  <a href="{{ url_for('fccleaderboardlogin') }}" style="font-size:15px;color:#EB8B24;margin-left:100px"><u>Login</u></a>
+  <a href="{{ url_for('fccleaderboardregister') }}" style="font-size:15px;color:#EB8B24;margin-left:5px"><u>Register</u></a>
+</p>
 
-    <div>
-        <h2 class="text-center" style="font-size:65px;color:#505e6c;"><a href="{{ url_for('fccleaderboard') }}">FCC Leaderboard</a></h2>
-    </div>
+<div>
+  <table style="font-size:17px;width:76%;text-align:left;font-weight:normal;margin-left:100px" border="0">
+  <tr>
+    <th>User</th>
+    <th>Progress</th>
+  </tr>                                                
+  {% for fccampers in fccamperslist %}
+  <tr>
+    <td>{% print fccampers[0] %}</td>
+    <td>{% print fccampers[1] %}</td>
+  </tr>  
+  {% endfor %}               
+  </table>
+</div>  
 
-    <a href="{{ url_for('fccleaderboardlogin') }}" style="font-size:14px;color:#EB8B24;margin-left:100px"><u>Login</u></a>
-    <a href="{{ url_for('fccleaderboardregister') }}" style="font-size:14px;color:#EB8B24;margin-left:5px"><u>Register</u></a>
 
-    <div>
-      <table style="font-size:17px;width:76%;text-align:left;font-weight:normal;margin-left:100px" border="0">
-      <tr>
-        <th>User</th>
-        <th>Progress</th>
-      </tr>                                                
-      {% for fccampers in fccamperslist %}
-      <tr>
-        <td>{% print fccampers[0] %}</td>
-        <td>{% print fccampers[1] %}</td>
-      </tr>  
-      {% endfor %}               
-      </table>
-    </div>
-
-    <div class="footer-basic">
-        <footer>
-            <p class="copyright">info@code.sydney</p>
-            <p class="copyright">Code.Sydney Pty Ltd © 2018 Australian Company Number 625 436 151</p>
-        </footer>
-    </div>
     <script src="static/js/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="static/js/bs-animation.js"></script>
+    <script src="static/js/smart-forms.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
 </body>
+  <!-- Fellowship Ends -->
 
-</html>
+{% endblock content %}
