--- a/templates/index.html
+++ b/templates/index.html
@@ -126,28 +126,6 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/armschiu.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
-              <h4>Armstrong Chiu</h4>
-              <h5 class="text-muted">Developer Partner</h5>
-              <p class="team-text">Armstrong has 14 years of experience in Web Design and Development, 8 of which are frontend focused. 
-                He is also actively pursuing his interest in 3D rendering and animation and has been doing a lot of 
-                WebGL projects ever since. 
-                Armstrong has a degree in Mathematics major in Computer Science and has over 20 years of 
-                experience in the IT field starting out in the field of mainframe programming and product testing.</p>
-              <div class="d-flex justify-content-center">
-                <div class="p-4">
-                  <a href="https://www.linkedin.com/in/armstrong-chiu-29646a44/" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6">
-          <div class="card h-100">
-            <div class="card-body">
               <img src="{{ url_for('static', filename='img/tony.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Tony Johnson</h4>
               <h5 class="text-muted">Software Engineer / Systems Administrator</h5>
@@ -177,7 +155,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/prom.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Promie Yutasane</h4>
-              <h5 class="text-muted">Software Engineer</h5>
+              <h5 class="text-muted">Software Engineer / Systems Administrator</h5>
               <p class="team-text">Promie Yutasane is currently working as an Accounts and Data Analyst and a part-time 
                 Master of IT student at UNSW with Data Science and Artificial Intelligence as majors. 
                 He specialises in data analysis and visualisation, working with technologies such as 
@@ -188,8 +166,26 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
                 people who want to start their journey with web development.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
-                <div class="p-4">
                   <a href="https://www.linkedin.com/in/promie-yutasane-74a024140/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <img src="{{ url_for('static', filename='img/gagan.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h4>Gagan Shrestha</h4>
+              <h5 class="text-muted">Software Engineer</h5>
+              <p class="team-text">Gagan is a Software Testing Professional with over 12 years of experience in the testing domain. Gagan's key areas of expertise includes understanding complex business requirements and formulating robust test strategies, developingtest plan, test cases and automated test solutions, test case execution, defect management, and product support. His interest for Python started with test automation converting test scripts from Perl into Python. With discovery of the strength of Python to achieve significant efficiency and effectiveness, his passion has increased and he is in continuous pursuit of mastering the language. He is very excited to be part of Code.Sydney and support all who is in journey of learning Python.</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                <div class="p-4">
+                  <a href="https://www.linkedin.com/in/gagan-shrestha-0aaaa84/" target="_blank">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </div>
@@ -211,6 +207,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
     <div class="container">
       <div class="row">
 
+        <!--
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
@@ -228,7 +225,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
             </div>
           </div>
         </div>
-
+      -->
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
@@ -269,14 +266,13 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
 
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
-
             <div class="card-body">
+
               <img src="{{ url_for('static', filename='img/kevin.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Kevin Foong</h4>
               <h5 class="text-muted">Software Engineer</h5>
               <p class="team-text">Kevin has over 20 years of working experience in a variety of IT related areas including software development, web design and information management. The latter in the area of library and information science. He is currently working as a System Administrator for NSW Health where he mainly utilises SQL for report generation. He recently started learning Python, at first because he wanted to get into data science, but then found Flask along the way. He now considers himself a Python and Flask enthusiast and is interested in sharing his knowledge and learning from others.</p>
               <div class="d-flex justify-content-center">
-                <div class="p-4">
                 <div class="p-4">
                   <a href="https://www.linkedin.com/in/kevin-foong-044794/" target="_blank">
                     <i class="fab fa-linkedin"></i>
@@ -288,21 +284,9 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
           </div>
         </div>
 
-      </div>
-    </div>
-
-  </section>
-
- <!-- Mentors Section 1 -->
-  <div class="spacing"></div>
-
-  <section id="authors" class="my-5 text-center bg-light">
-
-    <div class="container">
-      <div class="row">
-
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
+
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/june.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>June Kongyang</h4>
@@ -310,11 +294,13 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
               <p class="team-text">June Kongyang is currently a design and development engineer. She has broad experience in design, development and testing of network security systems. June started coding using C and C++ for robotic control automation such as sensors and micro-controllers. June graduated with a masters degree in Electrical Engineering. She joined Code.Sydney due to her interest in both Python and JavaScript programming languages. She found both languages pretty handy on increasing work productivity. She is keen to share her knowledge to anyone who wants to learn coding.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
-                  <a href="https://au.linkedin.com/in/june-kongyang" target="_blank">
+                <div class="p-4">
+                    <a href="https://au.linkedin.com/in/june-kongyang" target="_blank">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
@@ -388,6 +374,12 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
             <img src="{{ url_for('static', filename='img/Calo.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="http://www.caloservices.com/" target="_blank">CALO Services</a></h4>
             <p class="service-text">CALO Services provides software solutions to fleet and education industry. Code.Sydney is helping CALO develop applications related to the education industry.</p>
+          </div>
+
+          <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/webdesignerpro.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <h4><a href="https://thewebdesignerpro.com/" target="_blank">The Web Designer Pro</a></h4>
+            <p class="service-text">Web Designer Pro is an agency which provides 3D rendering and animation.</p>
           </div>
 
         </div>
