--- a/templates/fccleaderboard.html
+++ b/templates/fccleaderboard.html
@@ -28,7 +28,7 @@
 <div>
   <table style="font-size:17px;width:76%;text-align:left;font-weight:normal;margin-left:100px" border="0">
   <tr>
-    <th>User</th>
+    <th>Camper</th>
     <th>Progress</th>
   </tr>       
   <tr>
