Mentors and Fellows updates

--- a/templates/fellowship.html
+++ b/templates/fellowship.html
@@ -118,7 +118,7 @@
             </tr>
             <tr>
               <td><a href="https://www.linkedin.com/in/florencia-calvo" target="_blank">Florencia Calvo</a></td>
-              <td>FCC Responsive Web Design</td>
+              <td>FCC JavaScript Algorithms and Data Structures / FCC Responsive Web Design</td>
               <td>January 2020</td>
             </tr>
             <tr>
