--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -38,6 +38,10 @@
         </thead>
         <tbody>
             <tr>
+                <td>February 2020</a></td>
+                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_February_2020.pdf') }}" target="_blank">The Hexagon February 2020</a></td>
+            </tr>
+            <tr>
                 <td>January 2020</a></td>
                 <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_January_2020.pdf') }}" target="_blank">The Hexagon January 2020</a></td>
             </tr>
