--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/tony.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/tony.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Tony Johnson</h4>
               <h5 class="text-muted">Software Engineer / Systems Administrator</h5>
               <p class="team-text">Despite having a Degree in Prehistory and Archaeology, Tony has survived 30 years in various IT 
@@ -153,7 +153,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/prom.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/promie.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Promie Yutasane</h4>
               <h5 class="text-muted">Software Engineer</h5>
               <p class="team-text">Promie Yutasane is currently working as an Accounts and Data Analyst and a part-time 
@@ -178,7 +178,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/gagan.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/gagan.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Gagan Shrestha</h4>
               <h5 class="text-muted">Software Engineer</h5>
               <p class="team-text">Gagan is a Software Testing Professional with over 12 years of experience in the testing domain. Gagan's key areas of expertise includes understanding complex business requirements and formulating robust test strategies, developingtest plan, test cases and automated test solutions, test case execution, defect management, and product support. His interest for Python started with test automation converting test scripts from Perl into Python. With discovery of the strength of Python to achieve significant efficiency and effectiveness, his passion has increased and he is in continuous pursuit of mastering the language. He is very excited to be part of Code.Sydney and support all who is in journey of learning Python.</p>
@@ -199,7 +199,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
 
   </section>
 
-  <!-- Mentors Section 1 -->
+  <!-- Mentors Section 2 -->
   <div class="spacing"></div>    
 
   <section id="authors" class="my-5 text-center bg-light">
@@ -210,7 +210,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/bin.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/bin.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Bin Liu</h4>
               <h5 class="text-muted">Software Engineer</h5>
               <p class="team-text">Bin has ten years working experience as a Software Developer and Business Intelligence consultant. His development career started with Java. Recently he is using some script languages like Python, Perl and JavaScript and actively participating as the lead developer of Census+ project. Bin has good sense in coding and is good at learning new technologies. He is interested in Python because it can be applied to many technological areas, such as web application development, data science and so on. He would like to make progress with others who are also interested in Python-related technologies.</p>
@@ -229,7 +229,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
           <div class="card h-100">
             <div class="card-body">
 
-              <img src="{{ url_for('static', filename='img/jaydn.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/jaydn.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Jaydn Chou</h4>
               <h5 class="text-muted">Software Engineer</h5>
               <p class="team-text">A medical scientist turned self-taught developer turned software engineer. Currently working at Arbor Networks using ReactJS, GraphQL/Apollo, Elasticsearch and Node to deliver products that present customers with a globally-scoped view of the internet threat landscape. Jaydn is passionate about minimal design. Her design approach is heavily influenced by Don Draper - "Make it simple, yet significant". An advocate of lifelong learning, design thinking and remote working. Also a JavaScript workshop facilitator and mentor at MusesJS (formerly NodeGirls). Excited to help newcomers embark on their coding journey as well as helping each other progress through FreeCodeCamp's full-stack curriculum.</p>
@@ -249,7 +249,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
           <div class="card h-100">
             <div class="card-body">
 
-              <img src="{{ url_for('static', filename='img/kevin.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/kevin.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Kevin Foong</h4>
               <h5 class="text-muted">Software Engineer</h5>
               <p class="team-text">Kevin has over 20 years of working experience in a variety of IT related areas including software development, web design and information management. The latter in the area of library and information science. He is currently working as a System Administrator for NSW Health where he mainly utilises SQL for report generation. He recently started learning Python, at first because he wanted to get into data science, but then found Flask along the way. He now considers himself a Python and Flask enthusiast and is interested in sharing his knowledge and learning from others.</p>
@@ -269,7 +269,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
           <div class="card h-100">
 
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/june.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/june.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>June Kongyang</h4>
               <h5 class="text-muted">Software Engineer</h5>
               <p class="team-text">June Kongyang is currently a design and development engineer. She has broad experience in design, development and testing of network security systems. June started coding using C and C++ for robotic control automation such as sensors and micro-controllers. June graduated with a masters degree in Electrical Engineering. She joined Code.Sydney due to her interest in both Python and JavaScript programming languages. She found both languages pretty handy on increasing work productivity. She is keen to share her knowledge to anyone who wants to learn coding.</p>
@@ -282,6 +282,38 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
                 </div>
               </div>
 
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </section>
+
+
+  <!-- Mentors Section 3 -->
+  <div class="spacing"></div>    
+
+  <section id="authors" class="my-5 text-center bg-light">
+
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-3 col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <img src="{{ url_for('static', filename='img/surya.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h4>Surya Setiyaputra</h4>
+              <h5 class="text-muted">Software Engineer</h5>
+              <p class="team-text">Surya is a full-stack software developer with more than three-year professional experience with a previous life as a research scientist in Biophysics. He is a self-described ‘generalist’ with practical experience in setting up small businesses, personal finance, design, community building and tech startup in both Australia and Indonesia. Since mid-2019, Surya has been an active contributor to Free Code Camp Sydney meetups. As a self-taught developer, he is particularly interested in helping new coders who are interested in landing their entry role as a Junior Developer after going through the FreeCodeCamp full-stack curriculum. His current favourite web development stacks are Kotlin/Spring Boot, Ruby on Rails, Node, ReactJS and VueJS. In the near future, he aims to learn more SQL and functional programming. When he is not coding, Surya likes to read books about economics, anthropology, history and politics.</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://au.linkedin.com/in/suryast" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
