--- a/templates/awards.html
+++ b/templates/awards.html
@@ -64,7 +64,7 @@
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/xmas2018.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
+            <img src="{{ url_for('static', filename='img/xmas2018.png') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
             <p class="service-text">End of year mentors lunch 2018</p>
           </div>
 
@@ -74,7 +74,7 @@
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/xmas2019.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
+            <img src="{{ url_for('static', filename='img/xmas2019.png') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
             <p class="service-text">End of year mentors lunch 2019</p>
           </div>
 
