The HEXAGON April 2020

--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -11,8 +11,7 @@
             <a href="https://www.linkedin.com/company/code.sydney/" target="_blank" class="font-icon linkedin-hover soc-media"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.instagram.com/code.sydney/" target="_blank" class="font-icon instagram-hover soc-media"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/codesyd/" target="_blank" class="font-icon facebook-hover soc-media"><i class="fab fa-facebook"></i></a>
-            <a href="https://gitlab.com/codesydney" target="_blank" class="font-icon gitlab-hover soc-media"><i class="fab fa-gitlab"></i></a>
-            <a href="https://github.com/FreeCodeCampSydney" target="_blank" class="font-icon github-hover soc-media"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/codesydney" target="_blank" class="font-icon github-hover soc-media"><i class="fab fa-github"></i></a>
             <a href="https://www.youtube.com/channel/UCnOp_l8-EX3c-q2Tlj-2Iyw" target="_blank" class="font-icon youtube-hover soc-media"><i class="fab fa-youtube"></i></a>
             <a href="http://www.freecodecampsydney.org/" target="_blank" class="font-icon freecodecamp-hover soc-media"><i class="fab fa-free-code-camp"></i></a>
           <p>
