--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -38,6 +38,10 @@
         </thead>
         <tbody>
             <tr>
+                <td>April 2020</a></td>
+                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_April_2020.pdf') }}" target="_blank">The Hexagon April 2020</a></td>
+            </tr>
+            <tr>
                 <td>March 2020</a></td>
                 <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_March_2020.pdf') }}" target="_blank">The Hexagon March 2020</a></td>
             </tr>
