Integrated Calendly, added Zoned photo, removed some offerings

--- a/templates/awards.html
+++ b/templates/awards.html
@@ -44,37 +44,44 @@
         <div class="row">
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/pythonteam.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
+            <img src="{{ url_for('static', filename='img/pythonteam.jpg') }}" class="mb-2 img-fluid">
             <p class="service-text">With Matthew Kean, Minister for Innovation and Better Regulation during the presentation of our 1st place award at Vibewire's Hack4FI (Financial Inclusion).</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/3rdh4h.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
+            <img src="{{ url_for('static', filename='img/3rdh4h.jpg') }}" class="mb-2 img-fluid">
             <p class="service-text">Code.Sydney's winning team at Vibewire's Hack4Homelessness. We bagged the 3rd spot.</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/hack4dv.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
+            <img src="{{ url_for('static', filename='img/hack4dv.jpg') }}" class="mb-2 img-fluid">
             <p class="service-text">Code.Sydney's contingent at Vibewire's Hack4DV (Domestic Violence).</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/fccteam.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
+            <img src="{{ url_for('static', filename='img/team_zoned.jpg') }}" class="mb-2 img-fluid">
+            <p class="service-text">
+              During Covid-19 lockdown around April 2020, Code.Sydney joined an online hackathon organised by StayHomeHack. As volunteer programmers, we thought we have an obligation to share our thoughts on how what was happening at the time.
+            </p>
+          </div>
+
+          <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/fccteam.jpg') }}" class="mb-2 img-fluid">
             <p class="service-text">With Quincy Larson, founder of Free Code Camp during his visit to Melbourne.</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/xmas2018.png') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
+            <img src="{{ url_for('static', filename='img/xmas2018.png') }}" class="mb-2 img-fluid">
             <p class="service-text">End of year mentors lunch 2018</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/actura.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
+            <img src="{{ url_for('static', filename='img/actura.jpg') }}" class="mb-2 img-fluid">
             <p class="service-text">Actura's OneWorld Robotics Competition</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/xmas2019.png') }}" width="250px" class="mb-2 img-fluid" style="height:280px;width:400px;">
+            <img src="{{ url_for('static', filename='img/xmas2019.png') }}" class="mb-2 img-fluid">
             <p class="service-text">End of year mentors lunch 2019</p>
           </div>
 
