--- a/templates/index.html
+++ b/templates/index.html
@@ -38,46 +38,30 @@
   <section id="home-icons" class="py-5 move-up bg-light">
     <div class="container">
       <div class="row">
+       
         <div class="col-md-4 mb-4 text-center">
           <img src="{{ url_for('static', filename='img/001-responsive.png') }}" width="80px" class="mb-2 img-fluid">
-          <h4>Web Development</h4>
-          <p class="service-text">We help individuals, startups and established organisations alike in building bespoke web applications 
-            for their work or business. It can be as simple as informational websites or as complex as business 
-            process workflow applications.</p>
+          <h4>Pay-as-you-feel Development</h4>
+          <p class="service-text">We help individuals, startups and established organisations alike in building bespoke applications 
+            for their work or business. It can be as simple as brochure websites or as complex as business 
+            process workflow applications. We offer pay-you-feel model to help beginners gain real-world paid experience.</p>
         </div>
-        <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/006-mobile-app.png') }}" width="80px" class="mb-2 img-fluid">
-          <h4>Mobile Development</h4>
-          <p class="service-text">Bring your business closer to your customers. We can help you develop a mobile App.</p>
-        </div>
+       
         <div class="col-md-4 mb-4 text-center">
           <img src="{{ url_for('static', filename='img/002-checklist.png') }}" width="80px" class="mb-2 img-fluid">
           <h4>Address Validation</h4>
           <p class="service-text">We use Mastersoft Group's Harmony software to help customers in Australia and New Zealand cleanse
               and deduplicate address data as part of their customer information data quality initiative in the 
-              organisation. Harmony address validation is also available for Web, Salesforce, 
-              WordPress and Ecommerce(eg. Shopify, Magento, WooCommerce).</p>
+              organisation.</p>
         </div>
-      </div>
 
-      <div class="row">
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/005-login.png') }}" width="80px" class="mb-2 img-fluid">
-            <h4>Email and Phone Validation</h4>
-            <p class="service-text">Using Mastersoft Group solutions, we can assist businesses in
-              Australia and New Zealand in validating their customer emails and phone numbers.</p>
-          </div>
-          <div class="col-md-4 mb-4 text-center">
-              <img src="{{ url_for('static', filename='img/004-online-shop.png') }}" width="80px" class="mb-2 img-fluid">
-            <h4>WordPress and WooCommerce</h4>
-            <p class="service-text">We can help build and maintain WordPress or WooCommerce sites through our developer partner.</p>
-          </div>
-          <div class="col-md-4 mb-4 text-center">
-              <img src="{{ url_for('static', filename='img/003-man.png') }}" width="80px" class="mb-2 img-fluid">
-            <h4>Free Consultation</h4>
-            <p class="service-text">We offer no obligation free consultation so feel free to have a chat with us and discuss your requirements.</p>
-          </div>
+        <div class="col-md-4 mb-4 text-center">
+          <img src="{{ url_for('static', filename='img/003-man.png') }}" width="80px" class="mb-2 img-fluid">
+          <h4>Free Consultation</h4>
+          <p class="service-text">Have a chat with us to discuss how we can help.</p>
         </div>
+
+      </div>
     </div>
   </section>
   <!-- Services Ends --> 
