--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,7 +11,7 @@
           <div class="col-lg-12 text-center mt-5">
         
             <h1 class="display-3 mt-5 pt-5 top-spacing" style="font-family:Montserrat;">
-              Contact
+              Book a meeting
             </h1>
         
            </div>
@@ -25,46 +25,59 @@
   <section id="contact" class="py-5">
     <div class="container">
       <div class="row">
+
+        <div class="col-lg-12">
+          <h3>Book a 30-minute meeting</h3>
+          <!-- Calendly inline widget begin -->
+          <div class="calendly-inline-widget" data-url="https://calendly.com/codesydney" style="min-width:320px;height:630px;"></div>
+          <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+          <!-- Calendly inline widget end -->
+        </div>
+
         <div class="col-lg-9">
           <h3>Get In Touch</h3>
             <div class="mb-3 closer">
                 <a href="mailto:info@code.sydney?Subject=Enquiry" target="_top">info@code.sydney</a>
             </div>
-          <form data-bss-recipient="50e723e2d34f5df51ec3ded43a1838ce" method="POST" action="/">
-            <div class="input-group input-group-lg mb-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text">
-                  <i class="fas fa-user"></i>
-                </span>
-              </div>
-              <input type="text" class="form-control" placeholder="Name" name="name" required>
-            </div>
 
-            <div class="input-group input-group-lg mb-3 mt-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text">
-                  <i class="fas fa-envelope"></i>
-                </span>
-              </div>
-              <input type="text" class="form-control" placeholder="Email" name="email" required>
-            </div>
+            <form data-bss-recipient="50e723e2d34f5df51ec3ded43a1838ce" method="POST" action="/">
 
-            <div class="input-group input-group-lg mb-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text">
-                  <i class="fas fa-pencil-alt"></i>
-                </span>
+              <div class="input-group input-group-lg mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fas fa-user"></i>
+                  </span>
+                </div>
+                <input type="text" class="form-control" placeholder="Name" name="name" required>
               </div>
-              <textarea class="form-control" placeholder="Message" rows="5" name="message" required></textarea>
-            </div>
 
-            <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
+              <div class="input-group input-group-lg mb-3 mt-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fas fa-envelope"></i>
+                  </span>
+                </div>
+                <input type="text" class="form-control" placeholder="Email" name="email" required>
+              </div>
+
+              <div class="input-group input-group-lg mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fas fa-pencil-alt"></i>
+                  </span>
+                </div>
+                <textarea class="form-control" placeholder="Message" rows="5" name="message" required></textarea>
+              </div>
+
+              <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
           </form>
+
         </div>
 
         <div class="col-lg-3 align-self-center">
           <img src="{{ url_for('static', filename='img/logo.png') }}" alt="" class="img-fluid">
         </div>
+
       </div>
     </div>
   </section>
