--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -33,7 +33,7 @@
         <a href="{{ url_for('fccleaderboard') }}" class="nav-link">Campers</a>
       </li>
       <li class="nav-item">
-        <a href="{{ url_for('contact') }}" class="nav-link">Contact</a>
+        <a href="{{ url_for('contact') }}" class="nav-link">Book a meeting</a>
       </li>
     </ul>
   </div>
