Integrated Calendly, added Zoned photo, removed some offerings

--- a/templates/awards.html
+++ b/templates/awards.html
@@ -61,7 +61,7 @@
           <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/team_zoned.jpg') }}" class="mb-2 img-fluid">
             <p class="service-text">
-              During Covid-19 lockdown around April 2020, Code.Sydney joined an online hackathon organised by StayHomeHack. As volunteer programmers, we thought we have an obligation to share our thoughts on how what was happening at the time.
+              During Covid-19 lockdown around April 2020, Code.Sydney joined an online hackathon organised by StayHomeHack. As volunteer programmers, we thought we have an obligation to share our thoughts on what was happening at the time.
             </p>
           </div>
 
