Micro Bootcamp page tweaks

--- a/templates/microbootcamp.html
+++ b/templates/microbootcamp.html
@@ -68,7 +68,7 @@
   <br/>
   <div class="text-center">
     <h1>
-       Schedule and Fees
+       Training Details
     </h1>
   </div>
   <p style = "margin: 30px">
@@ -77,13 +77,40 @@
   <table style="margin-left: 20px" id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
     <tbody>
         <tr>
-          <td>Next Cohort</a></td>
-          <td>1st June 2020</a></td>
+          <td>Class Start Date</td>
+          <td>1st June 2020</td>
+        </tr>
+        <tr>
+          <td>Intake</td>
+          <td>10 participants only</td>
+        </tr>
+        <tr>
+          <td>Target Audience</td>
+          <td>1. Those who are thinking of getting into some coding bootcamp but not sure as yet whether it is for them<br/> 
+              2. Complete coding beginners who do not know where to start<br/>
+              3. Those who just want to learn basic web development in a collaborative environment<br/>
+        </tr>
+        <tr>
+          <td>Duration</td>
+          <td>We will try our best to finish the course within 2 months but will be happy to extend if needed.</td>
         </tr>
         <tr>
           <td>Fee</td>
-          <td>1st June 2020 ($49 Non-refundable Reservation Fee; $99 Refundable during 1st week of HTML/CSS; $99 Refundable during 1st week of JS)</td>
+          <td>$49 Payable now; non-refundable<br/> 
+              $99 Payable before HTML/CSS starts; refundable in the first week of the class<br/>
+              $99 Payable before JS starts; refundable in the first week of the class<br/>
+              <br/>
+              Please note that revenues will be shared across Code.Sydney's Mentors Fund, Code.Sydney's Operating Expenses, Donation to FreeCodeCamp and Instructors' Fee.
         </tr>
+        <td>Bank Account</td>
+        <td>Please send your payment (with your name in the description) to: <br/>
+            <br>
+            Code.Sydney Pty Ltd<br/> 
+            BSB: 302-162<br/>
+            Account: 1261304<br/>
+            <br/>
+            Please notify us of your payment via email at info@code.sydney.
+      </tr>
     </tbody>
 </table>
 
@@ -104,7 +131,7 @@
 </p>
 
 <p style = "margin: 30px">We are a believer of freeCodeCamp.org hence this micro bootcamp will be anchored to the first 2 sections of freeCodeCamp curriculum. In fact, if you are self-driven, we highly recommend that you just go through freeCodeCamp.org yourself and just join our slack channel like other self-driven learners.
-However, if you need someone to push you, then this micro bootcamp is for you. We will also ensure that there will be regular class zoom meetings (ie. Mon/Wed/Fri) to share our progress and any roadblocks along the way. At the end of the course, we will also introduce you to GitHub to learn how to build a project within a team environment.
+However, if you need someone to push you, then this micro bootcamp is for you. We will primarily collaborate using a private channel in slack and hold regular class zoom meetings (ie. Mon/Wed/Fri) to share our progress and any roadblocks along the way. At the end of the course, we will also introduce you to GitHub to learn how to build a project within a team environment.
 </p>
       
  <p></p>
@@ -158,10 +185,12 @@ However, if you need someone to push you, then this micro bootcamp is for you. W
               <img src="{{ url_for('static', filename='img/promie.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Promie Yutasane</h4>
               <h5 class="text-muted">Instructor</h5>
-              <p class="team-text">Promie Yutasane is currently working as an Accounts and Data Analyst and a part-time 
-                Master of IT student at UNSW with Data Science and Artificial Intelligence as majors. 
-                He specialises in data analysis and visualisation, working with technologies such as 
-                Python, SQL, Javascript and VBA. Promie has completed FreeCodeCamp's front-end curriculum and 
+              <p class="team-text">
+                An Analyst turned Software Engineer currently working at Hireup using NodeJS, MongoDB, React and Vue. 
+                A strong focus on full-stack development. 
+                Currently undertaking Masters of Information & Technology focused in Artificial Intelligence 
+                and E-Commerce systems at the University of New South Wales (UNSW).
+                Promie has completed FreeCodeCamp's front-end curriculum and 
                 currently exploring full stack development. Promie is passionate with both the design 
                 component and the logical aspect of programming. 
                 He is looking forward to contributing to the community by sharing the knowledge to 
