Beginner Vue Course

--- a/templates/index.html
+++ b/templates/index.html
@@ -140,10 +140,11 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
               <img src="{{ url_for('static', filename='img/promie.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Promie Yutasane</h4>
               <h5 class="text-muted">Software Engineer</h5>
-              <p class="team-text">Promie Yutasane is currently working as an Accounts and Data Analyst and a part-time 
-                Master of IT student at UNSW with Data Science and Artificial Intelligence as majors. 
-                He specialises in data analysis and visualisation, working with technologies such as 
-                Python, SQL, Javascript and VBA. Promie has completed FreeCodeCamp's front-end curriculum and 
+              <p class="team-text">Promie is an Analyst turned Software Engineer currently working at Hireup using NodeJS, MongoDB, React and Vue. 
+                A strong focus on full-stack development. 
+                Currently undertaking Masters of Information & Technology focused in Artificial Intelligence 
+                and E-Commerce systems at the University of New South Wales (UNSW).
+                Promie has completed FreeCodeCamp's front-end curriculum and 
                 currently exploring full stack development. Promie is passionate with both the design 
                 component and the logical aspect of programming. 
                 He is looking forward to contributing to the community by sharing the knowledge to 
