Promie's profile photo and blurb update

--- a/templates/index.html
+++ b/templates/index.html
@@ -137,18 +137,15 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/promie.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/promie_new.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Promie Yutasane</h4>
               <h5 class="text-muted">Software Engineer</h5>
-              <p class="team-text">Promie is an Analyst turned Software Engineer currently working at Hireup using NodeJS, MongoDB, React and Vue. 
-                A strong focus on full-stack development. 
-                Currently undertaking Masters of Information & Technology focused in Artificial Intelligence 
-                and E-Commerce systems at the University of New South Wales (UNSW).
-                Promie has completed FreeCodeCamp's front-end curriculum and 
-                currently exploring full stack development. Promie is passionate with both the design 
-                component and the logical aspect of programming. 
-                He is looking forward to contributing to the community by sharing the knowledge to 
-                people who want to start their journey with web development.</p>
+              <p class="team-text">Promie is currently working as a Software Engineer at Hireup, a tech company with an online platform that connects people with disability with support workers. 
+                He has a very strong focus on full stack development and currently using NodeJS, MongoDB, GraphQL/Apollo, React and Vue. 
+                He is a part-time student at UNSW studying Masters of IT specialising in Artificial Intelligence and E-Commerce Systems. 
+                Promie spends his spare time mentoring new programmers at Code.Sydney. As one of the pioneer mentors of Code.Sydney, 
+                Promie has introduced standardised processes around GitHub code submission among developers. He is also the chief envangelist of Vue JS in Code.Sydney.   
+              </p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
                   <a href="https://www.linkedin.com/in/promie-yutasane-74a024140/" target="_blank">
