Promie's profile photo and blurb update

--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
               <p class="team-text">Promie is currently working as a Software Engineer at Hireup, a tech company with an online platform that connects people with disability with support workers. 
                 He has a very strong focus on full stack development and currently using NodeJS, MongoDB, GraphQL/Apollo, React and Vue. 
                 He is a part-time student at UNSW studying Masters of IT specialising in Artificial Intelligence and E-Commerce Systems. 
-                Promie spends his spare time mentoring new programmers at Code.Sydney. As one of the pioneer mentors of Code.Sydney, 
+                Promie spends his spare time mentoring new programmers at Code.Sydney. As one of the pioneer mentors, 
                 Promie has introduced standardised processes around GitHub code submission among developers. He is also the chief envangelist of Vue JS in Code.Sydney.   
               </p>
               <div class="d-flex justify-content-center">
