Fixed Promie's title on Vue page

--- a/templates/vue.html
+++ b/templates/vue.html
@@ -149,7 +149,7 @@
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/promie_new.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Promie Yutasane</h4>
-              <h5 class="text-muted">Software Engineer</h5>
+              <h5 class="text-muted">Instructor/Facilitator</h5>
               <p class="team-text">Promie is currently working as a Software Engineer at Hireup, a tech company with an online platform that connects people with disability with support workers. 
                 He has a very strong focus on full stack development and currently using NodeJS, MongoDB, GraphQL/Apollo, React and Vue. 
                 He is a part-time student at UNSW studying Masters of IT specialising in Artificial Intelligence and E-Commerce Systems. 
