Added Paul as Vue instructor and included the Vue Documentary

--- a/templates/vue.html
+++ b/templates/vue.html
@@ -41,6 +41,14 @@
           </td>
         </tr>
         <tr>
+          <td>Vue and its Founder</td>
+          <td>
+            <a href="https://youtu.be/OrxmtDw4pVI" target="_blank">
+              A short documentary
+            </a> 
+          </td>
+        </tr>
+        <tr>
           <td>Vue vs React vs Angular</td>
           <td>
             <a href="https://trends.google.com/trends/explore?cat=733&date=today%205-y&q=React,Vue,Angular" target="_blank">
@@ -70,7 +78,7 @@
             <a href="https://www.vuemastery.com/courses-path/beginner" target="_blank">
               Beginner path of Vue Mastery,
             </a> 
-             the first course is free. Our immediate focus is just around this first course.
+             The first course is free. Our immediate focus is just around this first course.
              Once finished, we will all then decide if it is worth subscribing to unlock next courses. 
              Please be advised that Code.Sydney is not affiliated to Vue Mastery.
           </td>
@@ -136,6 +144,29 @@
               <div class="d-flex justify-content-center">
                 <div class="p-4">
                   <a href="https://www.linkedin.com/in/kevin-foong-044794/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <img src="{{ url_for('static', filename='img/paul.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h4>Paul Kang</h4>
+              <h5 class="text-muted">Instructor</h5>
+              <p class="team-text">
+                Paul has over 15 years of commercial experience, currently working as a Cloud Technical Architect with experiences using platforms such as AWS, Azure and Salesforce.
+Partially works as a Full stack developer particularly focusing on Mobile and Ecommerce related platforms such as Shopify, using Vue, NuxtJS, GraphQL, FastAPI, Python and Flutter.
+Passionate about exploring practical use cases of AR/VR/XR other than Gaming.
+Always conscious of online security, emerging trends of technology and machine learning becoming more commoditised for developers to use in their Apps.
+                </p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://www.linkedin.com/in/paul-t-kang" target="_blank">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </div>
