--- a/templates/vue.html
+++ b/templates/vue.html
@@ -185,7 +185,7 @@ Always conscious of online security, emerging trends of technology and machine l
                 He has a very strong focus on full stack development and currently using NodeJS, MongoDB, GraphQL/Apollo, React and Vue. 
                 He is a part-time student at UNSW studying Masters of IT specialising in Artificial Intelligence and E-Commerce Systems. 
                 Promie spends his spare time mentoring new programmers at Code.Sydney. As one of the pioneer mentors, 
-                Promie has introduced standardised processes around GitHub code submission among developers. He is also the chief envangelist of Vue JS in Code.Sydney.   
+                Promie has introduced standardised processes around GitHub code submission among developers. He is also the chief evangelist of Vue JS in Code.Sydney.   
               </p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
