Added Real World Vue.js in Vue leaderboard

--- a/templates/vueleaderboardupdate.html
+++ b/templates/vueleaderboardupdate.html
@@ -71,6 +71,42 @@
             <td>{{ form.A11.label }}</td>
             <td>{{ form.A11 }}</td>
           </tr>
+          <tr>
+            <td>{{ form.B1.label }}</td>
+            <td>{{ form.B1 }}</td>
+          </tr>
+          <tr>
+            <td>{{ form.B2.label }}</td>
+            <td>{{ form.B2 }}</td>
+          </tr>
+          <tr>
+            <td>{{ form.B3.label }}</td>
+            <td>{{ form.B3 }}</td>
+          </tr>
+          <tr>
+            <td>{{ form.B4.label }}</td>
+            <td>{{ form.B4 }}</td>
+          </tr>
+          <tr>
+            <td>{{ form.B5.label }}</td>
+            <td>{{ form.B5 }}</td>
+          </tr>
+          <tr>
+            <td>{{ form.B6.label }}</td>
+            <td>{{ form.B6 }}</td>
+          </tr>
+          <tr>
+            <td>{{ form.B7.label }}</td>
+            <td>{{ form.B7 }}</td>
+          </tr>
+          <tr>
+            <td>{{ form.B8.label }}</td>
+            <td>{{ form.B8 }}</td>
+          </tr>
+          <tr>
+            <td>{{ form.B9.label }}</td>
+            <td>{{ form.B9 }}</td>
+          </tr>
          </table>
          <br>
          <div style="font-size:12px;margin-left:100px"> 
