Updated CoEs, June Newsletter, Vue Mastery

--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -38,6 +38,10 @@
         </thead>
         <tbody>
             <tr>
+              <td>June 2020</a></td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_June_2020.pdf') }}" target="_blank">The Hexagon June 2020</a></td>
+            </tr>
+            <tr>
               <td>May 2020</a></td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_May_2020.pdf') }}" target="_blank">The Hexagon May 2020</a></td>
             </tr>
