--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
           <div class="col">
             <div class="mb-5">
               <h1 class="text-primary pb-3 mt-5">
-                Meet The Team
+                Centres of Excellence
               </h1>
             </div>
           </div>
@@ -112,7 +112,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/tony.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Tony Johnson</h4>
-              <h5 class="text-muted">Software Engineer / Systems Administrator</h5>
+              <h5 class="text-muted">Head of JavaScript CoE</h5>
               <p class="team-text">Despite having a Degree in Prehistory and Archaeology, Tony has survived 30 years in various IT 
                 careers; from hardware sales and service, support desk, linux systems administration, 
                 management, consultancy, and software development. 
@@ -139,7 +139,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/promie_new.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Promie Yutasane</h4>
-              <h5 class="text-muted">Software Engineer</h5>
+              <h5 class="text-muted">Head of Vue CoE</h5>
               <p class="team-text">Promie is currently working as a Software Engineer at Hireup, a tech company with an online platform that connects people with disability with support workers. 
                 He has a very strong focus on full stack development and currently using NodeJS, MongoDB, GraphQL/Apollo, React and Vue. 
                 He is a part-time student at UNSW studying Masters of IT specialising in Artificial Intelligence and E-Commerce Systems. 
@@ -160,14 +160,13 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/gagan.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
-              <h4>Gagan Shrestha</h4>
-              <h5 class="text-muted">Software Engineer</h5>
-              <p class="team-text">Gagan is a Software Testing Professional with over 12 years of experience in the testing domain. Gagan's key areas of expertise includes understanding complex business requirements and formulating robust test strategies, developingtest plan, test cases and automated test solutions, test case execution, defect management, and product support. His interest for Python started with test automation converting test scripts from Perl into Python. With discovery of the strength of Python to achieve significant efficiency and effectiveness, his passion has increased and he is in continuous pursuit of mastering the language. He is very excited to be part of Code.Sydney and support all who is in journey of learning Python.</p>
+              <img src="{{ url_for('static', filename='img/kevin.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h4>Kevin Foong</h4>
+              <h5 class="text-muted">Head of Flask CoE</h5>
+              <p class="team-text">Kevin has over 20 years of working experience in a variety of IT related areas including software development, web design and information management. The latter in the area of library and information science. He is currently working as a System Administrator for NSW Health where he mainly utilises SQL for report generation. He recently started learning Python, at first because he wanted to get into data science, but then found Flask along the way. He now considers himself a Python and Flask enthusiast and is interested in sharing his knowledge and learning from others.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
-                <div class="p-4">
-                  <a href="https://www.linkedin.com/in/gagan-shrestha-0aaaa84/" target="_blank">
+                  <a href="https://www.linkedin.com/in/kevin-foong-044794/" target="_blank">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </div>
@@ -188,13 +187,32 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
 
     <div class="container">
       <div class="row">
+        <div class="col-lg-3 col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+
+              <img src="{{ url_for('static', filename='img/surya.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h4>Surya Setiyaputra</h4>
+              <h5 class="text-muted">Head of React CoE</h5>
+              <p class="team-text">Surya is a full-stack software developer with more than three-year professional experience with a previous life as a research scientist in Biophysics. He is a self-described ‘generalist’ with practical experience in setting up small businesses, personal finance, design, community building and tech startup in both Australia and Indonesia. Since mid-2019, Surya has been an active contributor to Free Code Camp Sydney meetups. As a self-taught developer, he is particularly interested in helping new coders who are interested in landing their entry role as a Junior Developer after going through the FreeCodeCamp full-stack curriculum. His current favourite web development stacks are Kotlin/Spring Boot, Ruby on Rails, Node, ReactJS and VueJS. In the near future, he aims to learn more SQL and functional programming. When he is not coding, Surya likes to read books about economics, anthropology, history and politics.</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://au.linkedin.com/in/suryast" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
 
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/bin.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Bin Liu</h4>
-              <h5 class="text-muted">Software Engineer</h5>
+              <h5 class="text-muted">Head of Java CoE</h5>
               <p class="team-text">Bin has ten years working experience as a Software Developer and Business Intelligence consultant. His development career started with Java. Recently he is using some script languages like Python, Perl and JavaScript and actively participating as the lead developer of Census+ project. Bin has good sense in coding and is good at learning new technologies. He is interested in Python because it can be applied to many technological areas, such as web application development, data science and so on. He would like to make progress with others who are also interested in Python-related technologies.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -209,64 +227,27 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
 
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
-            <div class="card-body">
-
-              <img src="{{ url_for('static', filename='img/jaydn.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
-              <h4>Jaydn Chou</h4>
-              <h5 class="text-muted">Software Engineer</h5>
-              <p class="team-text">A medical scientist turned self-taught developer turned software engineer. Currently working at Arbor Networks using ReactJS, GraphQL/Apollo, Elasticsearch and Node to deliver products that present customers with a globally-scoped view of the internet threat landscape. Jaydn is passionate about minimal design. Her design approach is heavily influenced by Don Draper - "Make it simple, yet significant". An advocate of lifelong learning, design thinking and remote working. Also a JavaScript workshop facilitator and mentor at MusesJS (formerly NodeGirls). Excited to help newcomers embark on their coding journey as well as helping each other progress through FreeCodeCamp's full-stack curriculum.</p>
-              <div class="d-flex justify-content-center">
-                <div class="p-4">
-                  <a href="https://www.linkedin.com/in/jaydnchou/" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6">
-          <div class="card h-100">
-            <div class="card-body">
-
-              <img src="{{ url_for('static', filename='img/kevin.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
-              <h4>Kevin Foong</h4>
-              <h5 class="text-muted">Software Engineer</h5>
-              <p class="team-text">Kevin has over 20 years of working experience in a variety of IT related areas including software development, web design and information management. The latter in the area of library and information science. He is currently working as a System Administrator for NSW Health where he mainly utilises SQL for report generation. He recently started learning Python, at first because he wanted to get into data science, but then found Flask along the way. He now considers himself a Python and Flask enthusiast and is interested in sharing his knowledge and learning from others.</p>
-              <div class="d-flex justify-content-center">
-                <div class="p-4">
-                  <a href="https://www.linkedin.com/in/kevin-foong-044794/" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6">
-          <div class="card h-100">
 
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/june.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>June Kongyang</h4>
-              <h5 class="text-muted">Software Engineer</h5>
+              <h5 class="text-muted">Head of Python CoE</h5>
               <p class="team-text">June Kongyang is currently a design and development engineer. She has broad experience in design, development and testing of network security systems. June started coding using C and C++ for robotic control automation such as sensors and micro-controllers. June graduated with a masters degree in Electrical Engineering. She joined Code.Sydney due to her interest in both Python and JavaScript programming languages. She found both languages pretty handy on increasing work productivity. She is keen to share her knowledge to anyone who wants to learn coding.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
-                <div class="p-4">
-                    <a href="https://au.linkedin.com/in/june-kongyang" target="_blank">
+                  <a href="https://au.linkedin.com/in/june-kongyang" target="_blank">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </div>
               </div>
-
             </div>
+
           </div>
         </div>
+      
+
+
+
 
       </div>
     </div>
@@ -274,7 +255,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
   </section>
 
 
-  <!-- Mentors Section 3 -->
+  <!-- Mentors Section 3 
   <div class="spacing"></div>    
 
   <section id="authors" class="my-5 text-center bg-light">
@@ -285,6 +266,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
+
               <img src="{{ url_for('static', filename='img/surya.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Surya Setiyaputra</h4>
               <h5 class="text-muted">Software Engineer</h5>
@@ -296,6 +278,8 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
                   </a>
                 </div>
               </div>
+
+
             </div>
           </div>
         </div>
@@ -304,6 +288,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
     </div>
 
   </section>
+  -->
 
   <div class="spacing"></div>
 
@@ -336,16 +321,15 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/actura.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
-            <h4><a href="http://www.actura.com.au/" target="_blank">Actura Australia</a></h4>
-            <p class="service-text">Actura empowers youth to master the critical STEAM related skill sets for their future success.</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/fcc.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a></h4>
             <p class="service-text">Free Code Camp is an open source community that helps you learn to code, build pro bono projects for nonprofits, and get a job as a developer.</p>
           </div>
+
+          <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/vuemastery.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <h4><a href="https://www.vuemastery.com/" target="_blank">Vue Mastery</a></h4>
+            <p class="service-text">Vue Mastery is preferred curriculum for our Vue learning. Vue Mastery gives a special discount coupon for Code.Sydney Vue learners.</p>          </div>
 
           <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/prettyprinted.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
@@ -353,6 +337,12 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
             <p class="service-text">Prettyprinted is a specialised Flask online training course provider. They are our education partner for our Flask training.</p>
           </div>
 
+          <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/actura.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <h4><a href="http://www.actura.com.au/" target="_blank">Actura Australia</a></h4>
+            <p class="service-text">Actura empowers youth to master the critical STEAM related skill sets for their future success.</p>
+          </div>
+          
           <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/thelittlespace.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://thelittlespace.com.au/" target="_blank">The Little Space</a></h4>
