Edited Vue Mastery's description

--- a/templates/index.html
+++ b/templates/index.html
@@ -329,7 +329,8 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
           <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/vuemastery.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://www.vuemastery.com/" target="_blank">Vue Mastery</a></h4>
-            <p class="service-text">Vue Mastery is preferred curriculum for our Vue learning. Vue Mastery gives a special discount coupon for Code.Sydney Vue learners.</p>          </div>
+            <p class="service-text">Code.Sydney has an established relationship with Vue Mastery which allows us to get discounted rates for their excellent Vue training materials.</p>          
+          </div>
 
           <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/prettyprinted.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
@@ -342,7 +343,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
             <h4><a href="http://www.actura.com.au/" target="_blank">Actura Australia</a></h4>
             <p class="service-text">Actura empowers youth to master the critical STEAM related skill sets for their future success.</p>
           </div>
-          
+
           <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/thelittlespace.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://thelittlespace.com.au/" target="_blank">The Little Space</a></h4>
