Added Qj as Mentor

--- a/templates/index.html
+++ b/templates/index.html
@@ -245,7 +245,29 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
           </div>
         </div>
       
+        <div class="col-lg-3 col-md-6">
+          <div class="card h-100">
 
+            <div class="card-body">
+              <img src="{{ url_for('static', filename='img/qj.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h4>Qj Stout-Spykers</h4>
+              <h5 class="text-muted">Head of Data Structures and Algorithms CoE</h5>
+              <p class="team-text">
+                Qj is a computer science graduate and achieved high distinctions in microprocessor systems, systems and database design, discrete mathematics and programming principles. His primary software development experience is in embedded systems, deep-learning and back-end engineering. Currently, he is constraining his focus to mastering full-stack web development, after which, he has his eye on studying project management.
+As a Code.Sydney volunteer, Qj has acted as a technical team lead and principal back-end engineer on the CodeSydney website rework and internal 'Strataly’ project respectively.
+Qj can usually be found deep in some obscure documentation or sharing his knowledge on the Code.Sydney Slack. In his past life, Qj was a professional musician and guitar tutor.
+              </p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://au.linkedin.com/in/qj-stout-spykers-704b221a1" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
 
 
 
