Creation of badges table and consumption via RESTPlus

--- a/templates/index.html
+++ b/templates/index.html
@@ -350,7 +350,7 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
 
           <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/vuemastery.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
-            <h4><a href="https://www.vuemastery.com/" target="_blank">Vue Mastery</a></h4>
+            <h4><a href="https://www.vuemastery.com/pricing/?coupon=CODESYDNEY25" target="_blank">Vue Mastery</a></h4>
             <p class="service-text">Code.Sydney has an established relationship with Vue Mastery which allows us to get discounted rates for their excellent Vue training materials.</p>          
           </div>
 
