The Hexagon Newsletter August 2020

--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -38,6 +38,10 @@
         </thead>
         <tbody>
             <tr>
+              <td>August 2020</a></td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_August_2020.pdf') }}" target="_blank">The Hexagon August 2020</a></td>
+            </tr>
+            <tr>
               <td>July 2020</a></td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_July_2020.pdf') }}" target="_blank">The Hexagon July 2020</a></td>
             </tr>
