Inclusion of Quasar leaderboard

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -39,11 +39,9 @@
         <li class="nav-item">
           <a href="{{ url_for('newsletter') }}" class="nav-link">Newsletter</a>
         </li>
-        <!--
-      <li class="nav-item">
-        <a href="{{ url_for('microbootcamp') }}" class="nav-link">Vue</a>
-      </li>
-      -->
+        <li class="nav-item">
+          <a href="{{ url_for('microbootcamp') }}" class="nav-link">Quasar</a>
+        </li>
         <li class="nav-item">
           <a href="{{ url_for('fccleaderboard') }}" class="nav-link">Campers</a>
         </li>
