--- a/templates/vueleaderboardupdate.html
+++ b/templates/vueleaderboardupdate.html
@@ -7,9 +7,9 @@
         <div class="col-lg-12 text-center mt-5">
           <h1
             class="display-3 mt-5 pt-5 top-spacing"
-            style="font-family: Montserrat;"
+            style="font-family: Montserrat"
           >
-            Let's learn Vue together
+            Quasar Study Group
           </h1>
         </div>
       </div>
@@ -18,14 +18,14 @@
 </section>
 <body>
   <div>
-    <h3 style="margin-left: 100px; color: gray;">My Vue Journey</h3>
+    <h3 style="margin-left: 100px; color: gray">My Quasar Journey</h3>
     <form method="POST" action="{{ url_for('vueleaderboardupdate') }}">
-      <table style="font-size: 12px; margin-left: 100px;">
+      <table style="font-size: 12px; margin-left: 100px">
         <tr>
           <td>{{ form.Email.label }}: {{ Email }}</td>
         </tr>
       </table>
-      <table style="font-size: 12px; margin-left: 100px;">
+      <table style="font-size: 12px; margin-left: 100px">
         <tr>
           <td>{{ form.A1.label }}</td>
           <td>{{ form.A1 }}</td>
@@ -71,82 +71,12 @@
           <td>{{ form.A11 }}</td>
         </tr>
         <tr>
-          <td>{{ form.B1.label }}</td>
-          <td>{{ form.B1 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.B2.label }}</td>
-          <td>{{ form.B2 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.B3.label }}</td>
-          <td>{{ form.B3 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.B4.label }}</td>
-          <td>{{ form.B4 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.B5.label }}</td>
-          <td>{{ form.B5 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.B6.label }}</td>
-          <td>{{ form.B6 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.B7.label }}</td>
-          <td>{{ form.B7 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.B8.label }}</td>
-          <td>{{ form.B8 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.B9.label }}</td>
-          <td>{{ form.B9 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.C1.label }}</td>
-          <td>{{ form.C1 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.C2.label }}</td>
-          <td>{{ form.C2 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.C3.label }}</td>
-          <td>{{ form.C3 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.C4.label }}</td>
-          <td>{{ form.C4 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.C5.label }}</td>
-          <td>{{ form.C5 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.C6.label }}</td>
-          <td>{{ form.C6 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.C7.label }}</td>
-          <td>{{ form.C7 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.C8.label }}</td>
-          <td>{{ form.C8 }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.C9.label }}</td>
-          <td>{{ form.C9 }}</td>
+          <td>{{ form.A12.label }}</td>
+          <td>{{ form.A12 }}</td>
         </tr>
       </table>
       <br />
-      <div style="font-size: 12px; margin-left: 100px;">
-        {{ form.Save }}
-      </div>
+      <div style="font-size: 12px; margin-left: 100px">{{ form.Save }}</div>
     </form>
   </div>
 
