JS Study Group inclusion

--- a/templates/vueleaderboardupdate.html
+++ b/templates/vueleaderboardupdate.html
@@ -9,7 +9,7 @@
             class="display-3 mt-5 pt-5 top-spacing"
             style="font-family: Montserrat"
           >
-            Quasar Study Group
+            JavaScript Study Group
           </h1>
         </div>
       </div>
@@ -67,12 +67,124 @@
           <td>{{ form.A10 }}</td>
         </tr>
         <tr>
-          <td>{{ form.A11.label }}</td>
-          <td>{{ form.A11 }}</td>
+          <td>{{ form.B1.label }}</td>
+          <td>{{ form.B1 }}</td>
         </tr>
         <tr>
-          <td>{{ form.A12.label }}</td>
-          <td>{{ form.A12 }}</td>
+          <td>{{ form.B2.label }}</td>
+          <td>{{ form.B2 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B3.label }}</td>
+          <td>{{ form.B3 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B4.label }}</td>
+          <td>{{ form.B4 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B5.label }}</td>
+          <td>{{ form.B5 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B6.label }}</td>
+          <td>{{ form.B6 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B7.label }}</td>
+          <td>{{ form.B7 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B8.label }}</td>
+          <td>{{ form.B8 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B9.label }}</td>
+          <td>{{ form.B9 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B10.label }}</td>
+          <td>{{ form.B10 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B11.label }}</td>
+          <td>{{ form.B11 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B12.label }}</td>
+          <td>{{ form.B12 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B13.label }}</td>
+          <td>{{ form.B13 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B14.label }}</td>
+          <td>{{ form.B14 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B15.label }}</td>
+          <td>{{ form.B15 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B16.label }}</td>
+          <td>{{ form.B16 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B17.label }}</td>
+          <td>{{ form.B17 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B18.label }}</td>
+          <td>{{ form.B18 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B19.label }}</td>
+          <td>{{ form.B19 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B20.label }}</td>
+          <td>{{ form.B20 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B21.label }}</td>
+          <td>{{ form.B21 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B22.label }}</td>
+          <td>{{ form.B22 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B23.label }}</td>
+          <td>{{ form.B23 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B24.label }}</td>
+          <td>{{ form.B24 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B25.label }}</td>
+          <td>{{ form.B25 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B26.label }}</td>
+          <td>{{ form.B26 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B27.label }}</td>
+          <td>{{ form.B27 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B28.label }}</td>
+          <td>{{ form.B28 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B29.label }}</td>
+          <td>{{ form.B29 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.B30.label }}</td>
+          <td>{{ form.B30 }}</td>
         </tr>
       </table>
       <br />
