--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -40,11 +40,15 @@
           <a href="{{ url_for('newsletter') }}" class="nav-link">Newsletter</a>
         </li>
         <li class="nav-item">
-          <a href="{{ url_for('microbootcamp') }}" class="nav-link">Quasar</a>
+          <a href="{{ url_for('microbootcamp') }}" class="nav-link"
+            >JS Study Group</a
+          >
         </li>
+        <!--
         <li class="nav-item">
           <a href="{{ url_for('fccleaderboard') }}" class="nav-link">Campers</a>
         </li>
+         -->
         <li class="nav-item">
           <a href="{{ url_for('contact') }}" class="nav-link">Contact</a>
         </li>
