--- a/templates/vueleaderboardregister.html
+++ b/templates/vueleaderboardregister.html
@@ -9,7 +9,7 @@
           <div class="col-lg-12 text-center mt-5">
         
             <h1 class="display-3 mt-5 pt-5 top-spacing" style="font-family:Montserrat;">
-              Quasar Study Group
+              JavaScript Study Group
             </h1>
         
            </div>
