Added photos and recent testimonials

--- a/templates/index.html
+++ b/templates/index.html
@@ -249,7 +249,7 @@ Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support
           <div class="card h-100">
 
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/qj.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/qj.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Qj Stout-Spykers</h4>
               <h5 class="text-muted">Head of Data Structures and Algorithms CoE</h5>
               <p class="team-text">
@@ -268,8 +268,6 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
 
           </div>
         </div>
-
-
 
       </div>
     </div>
