--- a/templates/awards.html
+++ b/templates/awards.html
@@ -1,93 +1,121 @@
-{% extends 'layout.html' %}
-
-
-{% block content %}
-  <!-- SHOWCASE -->
-  <section id="showcase">
-
-    <div class="primary-overlay text-white">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center mt-5">
-        
-            <h1 class="display-3 mt-5 pt-5 top-spacing" style="font-family:Montserrat;">
-              Awards and Events
-            </h1>
-        
-           </div>
-         </div>
-      </div>    
-    </div>
-
-  </section>
-
-  <!-- Our Services
-  <section id="services" class="my-5 text-center bg-info spacing-up">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="mb-5">
-              <h1 class="text-primary pb-3 mt-5">
-                <!-- Our Services
-              </h1>
-            </div>
-          </div>
-      </div>
-  </section>
--->
-
-  <!-- Awards and Events -->
-    <div class="spacing"></div>
-
-    <section id="home-icons" class="py-5 move-up-more bg-light">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/pythonteam.jpg') }}" class="mb-2 img-fluid">
-            <p class="service-text">With Matthew Kean, Minister for Innovation and Better Regulation during the presentation of our 1st place award at Vibewire's Hack4FI (Financial Inclusion).</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/3rdh4h.jpg') }}" class="mb-2 img-fluid">
-            <p class="service-text">Code.Sydney's winning team at Vibewire's Hack4Homelessness. We bagged the 3rd spot.</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/hack4dv.jpg') }}" class="mb-2 img-fluid">
-            <p class="service-text">Code.Sydney's contingent at Vibewire's Hack4DV (Domestic Violence).</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/team_zoned.jpg') }}" class="mb-2 img-fluid">
-            <p class="service-text">
-              During Covid-19 lockdown around April 2020, Code.Sydney joined an online hackathon organised by StayHomeHack. As volunteer programmers, we thought we have an obligation to share our thoughts on what was happening at the time.
-            </p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/fccteam.jpg') }}" class="mb-2 img-fluid">
-            <p class="service-text">With Quincy Larson, founder of Free Code Camp during his visit to Melbourne.</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/xmas2018.png') }}" class="mb-2 img-fluid">
-            <p class="service-text">End of year mentors lunch 2018</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/actura.jpg') }}" class="mb-2 img-fluid">
-            <p class="service-text">Actura's OneWorld Robotics Competition</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/xmas2019.png') }}" class="mb-2 img-fluid">
-            <p class="service-text">End of year mentors lunch 2019</p>
-          </div>
-
+{% extends 'layout.html' %} {% block content %}
+<!-- SHOWCASE -->
+<section id="showcase">
+  <div class="primary-overlay text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center mt-5">
+          <h1
+            class="display-3 mt-5 pt-5 top-spacing"
+            style="font-family: Montserrat"
+          >
+            Awards and Events
+          </h1>
         </div>
       </div>
-    </section>
-  <!-- Awards and Events Ends -->
+    </div>
+  </div>
+</section>
+
+<!-- Awards and Events -->
+<div class="spacing"></div>
+
+<section id="home-icons" class="py-5 move-up-more bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-4 text-center">
+        <img
+          src="{{ url_for('static', filename='img/pythonteam.jpg') }}"
+          class="mb-2 img-fluid"
+        />
+        <p class="service-text">
+          With Matthew Kean, Minister for Innovation and Better Regulation
+          during the presentation of our 1st place award at Vibewire's Hack4FI
+          (Financial Inclusion).
+        </p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <img
+          src="{{ url_for('static', filename='img/3rdh4h.jpg') }}"
+          class="mb-2 img-fluid"
+        />
+        <p class="service-text">
+          Code.Sydney's winning team at Vibewire's Hack4Homelessness. We bagged
+          the 3rd spot.
+        </p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <img
+          src="{{ url_for('static', filename='img/hack4dv.jpg') }}"
+          class="mb-2 img-fluid"
+        />
+        <p class="service-text">
+          Code.Sydney's contingent at Vibewire's Hack4DV (Domestic Violence).
+        </p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <img
+          src="{{ url_for('static', filename='img/team_zoned.jpg') }}"
+          class="mb-2 img-fluid"
+        />
+        <p class="service-text">
+          During Covid-19 lockdown around April 2020, Code.Sydney joined an
+          online hackathon organised by StayHomeHack. As volunteer programmers,
+          we thought we have an obligation to share our thoughts on what was
+          happening at the time.
+        </p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <img
+          src="{{ url_for('static', filename='img/fccteam.jpg') }}"
+          class="mb-2 img-fluid"
+        />
+        <p class="service-text">
+          With Quincy Larson, founder of Free Code Camp during his visit to
+          Melbourne.
+        </p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <img
+          src="{{ url_for('static', filename='img/actura.jpg') }}"
+          class="mb-2 img-fluid"
+        />
+        <p class="service-text">
+          Guest Judge at Actura's OneWorld Robotics Competition
+        </p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <img
+          src="{{ url_for('static', filename='img/PostCovid2020.jpg') }}"
+          class="mb-2 img-fluid"
+        />
+        <p class="service-text">Post-COVID Lockdown lunch 2020</p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <img
+          src="{{ url_for('static', filename='img/xmas2019.png') }}"
+          class="mb-2 img-fluid"
+        />
+        <p class="service-text">End of year mentors lunch 2019</p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <img
+          src="{{ url_for('static', filename='img/xmas2018.jpg') }}"
+          class="mb-2 img-fluid"
+        />
+        <p class="service-text">End of year mentors lunch 2018</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Awards and Events Ends -->
 
 {% endblock content %}
