--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -1,27 +1,24 @@
-{% extends 'layout.html' %}
-
-
-{% block content %}
-  <!-- SHOWCASE -->
-  <section id="showcase">
-
-    <div class="primary-overlay text-white">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center mt-5">
-        
-            <h1 class="display-3 mt-5 pt-5 top-spacing" style="font-family:Montserrat;">
-              Testimonials
-            </h1>
-        
-           </div>
-         </div>
-      </div>    
+{% extends 'layout.html' %} {% block content %}
+<!-- SHOWCASE -->
+<section id="showcase">
+  <div class="primary-overlay text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center mt-5">
+          <h1
+            class="display-3 mt-5 pt-5 top-spacing"
+            style="font-family: Montserrat"
+          >
+            Testimonials
+          </h1>
+        </div>
+      </div>
     </div>
+  </div>
+</section>
 
-  </section>
-
- <!-- Training Testimonials -->
+<!--
+ <!-- Training Testimonials
   <section id="services" class="my-5 text-center bg-info spacing-up">
       <div class="container">
         <div class="row">
@@ -34,54 +31,104 @@
           </div>
       </div>
   </section>
+-->
+<div class="spacing"></div>
 
-    <div class="spacing"></div>
-
-    <section id="home-icons" class="py-5 move-up-more bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 mb-4 text-center">
-            <p class="service-text">"Highly Recommended. Take it from me, I have a dozen uncompleted Udemy Python & Flask courses
-              sitting on my laptop. This course takes you from Python basics to a published web app in 5 weeks in a supportive and
-              collaborative small group with two amazing mentors. The two mentors are always on hand to help and offer insights from
-              their own vast industry experience - priceless!"</p>
-           <p class="service-text">
-            - Tim, CS-5 Cohort</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <p class="service-text">"I went in this course looking for a solid introduction to Flask. This course delivered that
-              and much, much, more. The mentors were very generous in sharing their experience in the end to end development of
-              a Web app, and I left with a portfolio project hosted in the cloud, and the opportunity to apply these skills to
-              well managed projects. So a big thankyou to Code.Sydney for providing this extremely valuable course!"</p>
-           <p class="service-text">
-            - Geoff, CS-5 Cohort</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <p class="service-text">"This course was a great introduction to Python and Flask - getting you to a point where
-              you can code a basic web app. It also paves the way for further learning. The face to face meet ups really help
-              and the support provided by the teachers is terrific - they are more willing to help the students when needed."</p>
-           <p class="service-text">
-            - Scott, CS-5 Cohort</p>
-          </div>
-
-           <div class="col-md-4 mb-4 text-center">
-            <p class="service-text">"It was a great learning experience. Specially mentors were friendly and responsive.
-              The method of learning was based on practical approach so fun to go through.
-              I would definitely recommend others for this course."</p>
-           <p class="service-text">
-            - Samundra, CS-6 Cohort</p>
-          </div>
-
-
-        </div>
+<section id="home-icons" class="py-5 move-up-more bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-4 text-center">
+        <p class="service-text">
+          "This has been the second time that Deadly Connections have engaged
+          Code.Sydney on an IT project. The first was when I requested them to
+          develop a landing page as an interim while waiting for the full
+          website. Even though Code.Sydney are a volunteer group of developers,
+          their dedication to the satisfactory completion of their projects is
+          undertaken with the utmost professionalism. <br />
+          Code.Sydney kept me updated every step of the way ensuring that every
+          detail is followed and well-executed. Another key differentiator is
+          their level of support after going live, they are always ready to
+          answer our call when help is needed and a regular monthly report of
+          website activities is being generated which can help us determine
+          future improvements."
+        </p>
+        <p class="service-text">
+          - Carly Mundine, CEO and Founder (<a
+            href="httpS://www.deadlyconnections.org.au/"
+            target="_blank"
+            >DCCAJS</a
+          >)
+        </p>
       </div>
-    </section>
-  <!-- Training Testimonials -->
 
+      <div class="col-md-4 mb-4 text-center">
+        <p class="service-text">
+          "Thank you, Code.Sydney for recommending Kevin Foong to work on the
+          PropertyExtractor project. It has been a pleasure working with him
+          throughout the journey. He is very responsive and always helpful from
+          prototyping until final delivery. I learnt that he is one of the best
+          mentors in Code.Sydney. <br />
+          Above all, I am most grateful for Kevin’s initiative and guidance to
+          successfully develop a working prototype that my stakeholders are
+          happy to use hence allowing my project to proceed to the next stage.
+          May Code.Sydney and Kevin keep up the good work!"
+        </p>
+        <p class="service-text">
+          - Ling-Pei Lin, Volunteer worker for two Sydney-based NFPs
+        </p>
+      </div>
 
-  <!-- Project Testimonials-->
+      <div class="col-md-4 mb-4 text-center">
+        <p class="service-text">
+          "Highly Recommended. Take it from me, I have a dozen uncompleted Udemy
+          Python & Flask courses sitting on my laptop. This course takes you
+          from Python basics to a published web app in 5 weeks in a supportive
+          and collaborative small group with two amazing mentors. The two
+          mentors are always on hand to help and offer insights from their own
+          vast industry experience - priceless!"
+        </p>
+        <p class="service-text">- Tim, CS-5 Cohort</p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <p class="service-text">
+          "I went in this course looking for a solid introduction to Flask. This
+          course delivered that and much, much, more. The mentors were very
+          generous in sharing their experience in the end to end development of
+          a Web app, and I left with a portfolio project hosted in the cloud,
+          and the opportunity to apply these skills to well managed projects. So
+          a big thankyou to Code.Sydney for providing this extremely valuable
+          course!"
+        </p>
+        <p class="service-text">- Geoff, CS-5 Cohort</p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <p class="service-text">
+          "This course was a great introduction to Python and Flask - getting
+          you to a point where you can code a basic web app. It also paves the
+          way for further learning. The face to face meet ups really help and
+          the support provided by the teachers is terrific - they are more
+          willing to help the students when needed."
+        </p>
+        <p class="service-text">- Scott, CS-5 Cohort</p>
+      </div>
+
+      <div class="col-md-4 mb-4 text-center">
+        <p class="service-text">
+          "It was a great learning experience. Specially mentors were friendly
+          and responsive. The method of learning was based on practical approach
+          so fun to go through. I would definitely recommend others for this
+          course."
+        </p>
+        <p class="service-text">- Samundra, CS-6 Cohort</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Training Testimonials -->
+
+<!-- Project Testimonials
   <section id="services" class="my-5 text-center bg-info spacing-up">
       <div class="container">
         <div class="row">
@@ -116,6 +163,5 @@
       </div>
     </section>
   <!-- Project Testimonials -->
-
 
 {% endblock content %}
